feat(e4): concluir linha do tempo e interface de interações
